Add a new heading created in the brands section

--- a/index.html
+++ b/index.html
@@ -253,6 +253,9 @@
     <section class="section-brands">
       <div class="container">
         <div class="brands">
+          <h2 class="visually-hidden">
+            Brands
+          </h2>
           <div class="brands__box">
             <img class="brands__img-glossier" src="./images/logo-glossier.png" alt="Logo Glossier" width="162" height="55">
             
